# five

./: .gitignore  README.md  pyproject.toml
src/five/: __init__.py
src/five/ai/: __init__.py  encoder.py  inference.py  interfaces.py  mcts.py  model.py  players.py
src/five/common/: config.py  logging.py  utils.py
src/five/core/: __init__.py  board.py  game.py  move.py  replay.py  rules.py  state.py
src/five/gui/: __init__.py  app.py  bad_move_reasons.py  controllers.py  viewmodels.py
src/five/gui/pages/: __init__.py  generate_page.py  pretrain_page.py  replay_page.py  reward_test_page.py  train_page.py  versus_ai_page.py
src/five/gui/widgets/: __init__.py  board_canvas.py  metrics_panel.py  move_detail_panel.py
src/five/storage/: __init__.py  checkpoint_store.py  game_store.py  metric_store.py  model_registry.py  schemas.py
src/five/train/: __init__.py  best_epoch.py  dataset.py  evaluator.py  events.py  export_human_games.py  imitation_data.py  pretrain.py  reward.py  run_manager.py  self_play.py  trainer.py
tests/: test_core.py  test_reward.py  test_threat_shapes.py
