[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "five"
version = "0.1.0"
description = "Gomoku reinforcement learning system with visualization and human-vs-AI play."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "torch>=2.2",
]

[project.scripts]
five-train = "five.train.trainer:main"
five-gui = "five.gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
